Fix overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,6 @@ body {
 * {
 	font-family: 'Inter';
 	font-style: normal;
-	overflow: scroll;
 }
 
 .bold {
